JNG-5916 Add support og generator properties and fixes factory expression handling